# party

./: .env  .gitignore  .vercelignore  CNAME  Cargo.toml  DEVELOPMENT.md  GRPC_SERVER_STATUS.md  INTEGRATION_SUMMARY.md  README.md  package-lock.json  test.http
.devcontainer/: .env  .env.development  .env.production  Dockerfile  README.md  devcontainer.json  docker-compose.yml  init-db.sql  start-dev.sh  start-services.sh  validate-services.sh  validate-setup.sh
.github/workflows/: build.yml  tests.yml
app/: Cargo.toml
app/bouncer/: .gitignore  .lintstagedrc.json  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  index.html  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  ory.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
app/bouncer/api/: bouncer.rs  test.rs
app/bouncer/app/: globals.css  layout.tsx  page.tsx
app/bouncer/app/auth/login/: page.tsx
app/bouncer/app/auth/recovery/: page.tsx
app/bouncer/app/auth/registration/: page.tsx
app/bouncer/app/auth/setup-passkey/: page.tsx
app/bouncer/app/auth/verification/: page.tsx
app/bouncer/app/components/: footer.tsx  navbar.tsx
app/bouncer/app/example-party/: page.tsx
app/bouncer/app/invitations/: invitations-content.tsx  page.tsx  party-card-list.tsx  party-card.tsx  party-list.tsx
app/bouncer/app/invitations/__tests__/: page.test.tsx
app/bouncer/app/parties/: page.tsx
app/bouncer/app/parties/[id]/: page.tsx
app/bouncer/app/parties/[slug]/: guest-list.tsx  page.tsx  party-detail-wrapper.tsx  rsvp-form.tsx
app/bouncer/app/parties/[slug]/__tests__/: guest-list.test.tsx  page.test.tsx  rsvp.test.tsx
app/bouncer/app/parties/housewarming-2024/: housewarming-invitation.tsx  page.tsx
app/bouncer/app/receipt-test/: page.tsx
app/bouncer/app/settings/: page.tsx
app/bouncer/components/: CustomLogin.tsx  TypewriterText.tsx
app/bouncer/components/auth/: login-button.tsx  login-form.tsx  logout-button.tsx  magic-link-registration-form.tsx  passkey-login-form.tsx  passkey-management.tsx  register-form.tsx
app/bouncer/components/auth/__tests__/: login-form.test.tsx  logout-button.test.tsx  register-form.test.tsx
app/bouncer/components/ui/: Anchor.tsx  Button.tsx  Card.tsx  Input.tsx  Text.tsx
app/bouncer/lib/: api-client-client.ts  api-client.ts  api-url.ts  api.ts  auth-client.ts  auth-config.ts  auth.ts  email-service.ts  email.ts  types.ts  webauthn-utils.ts
app/bouncer/lib/__tests__/: api-client-client.test.ts  api-client.test.ts  auth-config.test.ts  auth.test.ts  email-service.test.ts
app/bouncer/lib/hooks/: useWebAuthn.ts
app/bouncer/lib/providers/: GuestProvider.tsx  PartyProvider.tsx  RSVPProvider.tsx  api-client.ts  index.ts  party-provider.tsx  rsvp-provider.tsx  types.ts
app/bouncer/lib/webgl/: receipt-canvas.tsx  receipt-effect.tsx
app/bouncer/migrations/: 2025-12-26T00-52-06.163Z.sql  2025-12-28T11-35-36.163Z.sql  2026-01-01T20-07-45.passkey.sql  2026-01-02T01-56-00.fix-passkey-transports.sql  2026-01-04T04-45-59.party-and-rsvp.sql  seed-parties.sql
app/bouncer/types/: auth.ts  webauthn.ts
app/guestbook/: Cargo.toml
app/guestbook/src/: main.rs
app/pregame/: .env  Cargo.toml  TEST_SUMMARY.md  build.rs
app/pregame/migrations/: 20240429034024_party.sql
app/pregame/proto/: party.proto
app/pregame/src/: api.rs  auth.rs  db.rs  identity.rs  lib.rs  main.rs  model.rs  models.rs  server.rs
app/pregame/src/api/: auth.rs  error.rs  mod.rs  party.rs  rsvp.rs
app/pregame/src/auth/: ory.rs
app/pregame/tests/: grpc_server_tests.rs  guest_tests.rs  invitation_tests.rs  party_tests.rs  simple_tests.rs
app/pregame/tests/common/: mod.rs
design/: README.md  RFD-001-party-invitation-platform.md  RFD-002-frontend-architecture.md  RFD-003-north-star.md  RFD-004-party-design.md  RFD-005-technology-stack.md  RFD-006-party-schemas.md  RFD-007-identity-integration.md  RFD-007-passkey-authentication.md  home-page-copy.md
research/mh-post-processing/receipt/: craco.config.js  package-lock.json  package.json
research/mh-post-processing/receipt/public/: index.html
research/mh-post-processing/receipt/src/: App.js  fragmentShader.glsl  index.css
research/neon-rust-test/: Cargo.toml
research/neon-rust-test/src/: create_table.rs  delete_data.rs  read_data.rs  update_data.rs
research/ory-api-test/: .env  .gitignore  Cargo.toml  README.md
research/ory-api-test/src/: main.rs
research/ory-test/: PASSKEY_SETUP.md  middleware.ts  ory.config.ts  package-lock.json  package.json
research/ory-test/app/: layout.tsx  page.tsx
research/ory-test/app/auth/login/: page.tsx
research/ory-test/scripts/: toggle-passkey-env.sh  toggle-password-auth.sh
research/parallax-effect/depth-map-generator/: .gitignore  README.md  generate_depth_map.py  package-lock.json  pyproject.toml
research/parallax-effect/parallax-webgl/: README.md  index.html  package-lock.json  package.json
research/parallax-effect/parallax-webgl/src/: App.jsx  DepthMapVisualization.jsx  ReceiptEffect.jsx  index.css
scripts/: README.md  format.sh  lint.sh  pre-commit.sh
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  party.rs  server.rs
www/: next.config.js  package-lock.json  package.json
www/app/: globals.css  guest-provider.tsx  page.tsx
(+3 files in other folders)
