[package]
name = "party"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt = "0.16.0"
sha2 = "0.10.6"
bcrypt = "0.14.0"
hmac = "0.12.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
duckdb = { version = "0.7.1", features = ["bundled"] }
