[workspace]
members = [
    "bouncer",
    "pregame",
    "guestbook",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace members
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10.75"
postgres-openssl = "0.5.2"
tracing = "0.1"
axum = "0.8.7"
tower = "0.5.2"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5.7"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
