[package]
name = "guestbook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guestbook"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
postgres-openssl = "0.5.2"
openssl = "0.10.75"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
