[package]
name = "pregame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.12"