[package]
name = "pregame"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
axum = "0.8.7"
tracing = "0.1"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
openssl = "0.10.75"
postgres-openssl = "0.5.2"
tower = "0.5.2"
chrono = { version = "0.4", features = ["serde"] }
